feat(auth): SPRINT-35 add Google login for students
